--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <div>
-      <img src="http://www.facetheforce.today/kylo/400">
+      <img src="http://www.facetheforce.today/kylo/400" class="my-16">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
       TWIST HIS DICK!
       </button>
